--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -382,7 +382,8 @@
                     "Carrier": carrier,
                     "Weight": weightSelect,
                     "PageIndex": 1,
-                    "PageSize": 1000
+                    "PageSize": 1000,
+                    "OrderBy": "COST"
                 }),
                 dataType: "json",
                 contentType: "application/json;charset=utf-8",
